--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title: "HATYAIROIROI"
 
 
 # The slogan describes your website and is used on homepage in <title> and other important places
-slogan: "ของอร่อยในหาดใหญ่"
+slogan: ""
 
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
