--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 - title: หน้าหลัก
-  side: center
+  side: left
 - title: จัดหนัก
   url: "/"
   side: left
@@ -36,7 +36,7 @@
 
 - title: ดื่มนม
   url: "//"
-  side: center
+  side: left
   dropdown:
   - title: เหน็บชา หาดใหญ่ ขับผ่านต้องแวะซื้อ
     url: "//"
@@ -54,7 +54,7 @@
 
 - title: หวานๆ
   url: "/search/"
-  side: right
+  side: left
   dropdown:
   - title: บ้านไอติมหาดใหญ่-ไอติมแฮนเมด
     url: "//"
