--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ improve_content: https://github.com/Phlow/feeling-responsive/edit/gh-pages
 # Example: <img src="{{ site.urlimg }}/{{ post.image.title }}">
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}/image.jpg)
 #
-urlimg: "http://phlow.github.io/feeling-responsive/images/"
+urlimg: "http://hatyairoiroi.github.io/images/1907519_1418533878453023_4428677649078250248_n.jpg"
 
 
 # Logo size is 600x80 pixels
