--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -62,5 +62,12 @@
   - title: แวะเติมแก๊ส “แก๊สโซลีน” หาดใหญ่
     url: "//"
 
+- title: เกี่ยวกับเรา
+  url: "//"
+  side: right
+
+- title: ติดต่อเรา
+  url: "//"
+  side: right
 
   
