--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ improve_content: https://github.com/Phlow/feeling-responsive/edit/gh-pages
 # Example: <img src="{{ site.urlimg }}/{{ post.image.title }}">
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}/image.jpg)
 #
-urlimg: "hatyairoiroi.github.io/images/"
+urlimg: "https://hatyairoiroi.github.io/images/"
 
 
 # Logo size is 600x80 pixels
