--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ urlimg: "https://hatyairoiroi.github.io/images/"
 
 
 # Logo size is 600x80 pixels
-logo: "logo.png"
+logo: ""
 
 
 # Paginates all X entries
