--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
-- title: หน้าหลัก
+﻿- title: หน้าหลัก
   side: left
 - title: ร้านอาหารแนะนำ
-  url: "/"
+  url: "/ร้านอาหารแนะนำ/"
   side: left
   dropdown:
   - title: โคตรท้าพิสูจน์ต้องงลอง ก๋วยเตี๋ยวท้าพิสูจน์หาดใหญ่
-    url: "//"
+    url: "/ก๋วยเตี๋ยวท้าพิสูจน์หาดใหญ่/"
   - title: "โกอ้วนกับซาลาเปาทอดชื่อดังหาดใหญ่"
     url: "//"
   - title: "ก๋วยเตี๋ยวหมูย่างซอยลึกลับหาดใหญ่"
