--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 ﻿- title: หน้าหลัก
   side: left
 - title: ร้านอาหารแนะนำ
-  url: "hatyairoiroi.github.io/ร้านอาหารแนะนำ/"
+  url: "/ร้านอาหารแนะนำ/"
   side: left
   dropdown:
   - title: โคตรท้าพิสูจน์ต้องงลอง ก๋วยเตี๋ยวท้าพิสูจน์หาดใหญ่
