--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@
   side: left
   dropdown:
   - title: โคตรท้าพิสูจน์ต้องงลอง ก๋วยเตี๋ยวท้าพิสูจน์หาดใหญ่
-    url: "/่/"
+    url: "/โคตรท้าพิสูจน์ต้องลอง/"
   - title: "โกอ้วนกับซาลาเปาทอดชื่อดังหาดใหญ่"
     url: "//"
   - title: "ก๋วยเตี๋ยวหมูย่างซอยลึกลับหาดใหญ่"
