--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,11 +2,11 @@
   side: left
 
 - title: ร้านอาหารแนะนำ
-  url: "/ร้านอาหารแนะนำ/"
+  url: "//"
   side: left
   dropdown:
   - title: โคตรท้าพิสูจน์ต้องลอง ก๋วยเตี๋ยวท้าพิสูจน์หาดใหญ่
-    url: "/โคตรท้าพิสูจน์ต้องลอง/"
+    url: "//"
   - title: "โกอ้วนกับซาลาเปาทอดชื่อดังหาดใหญ่"
     url: "//"
   - title: "ก๋วยเตี๋ยวหมูย่างซอยลึกลับหาดใหญ่"
