--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
   side: left
 
 - title: ร้านอาหารแนะนำ
-  url: "//"
+  url: "/ร้านอาหารแนะนำ/"
   side: left
   dropdown:
   - title: โคตรท้าพิสูจน์ต้องลอง ก๋วยเตี๋ยวท้าพิสูจน์หาดใหญ่
