--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -27,7 +27,7 @@
     url: "//"
 
 - title: บุฟเฟ่ต์จัดหนัก
-  url: "//"
+  url: "/บุฟเฟ่ต์จัดหนัก/"
   side: left
   dropdown:
   - title: "โอโออิ หาดใหญ่ เคยไปหรือยัง?"
