--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,7 +36,7 @@
     url: "//"
 
 - title: เครื่องดื่มและของกินเล่น
-  url: "//"
+  url: "/เครื่องดื่มและของกินเล่น/"
   side: left
   dropdown:
   - title: เหน็บชา หาดใหญ่ ขับผ่านต้องแวะซื้อ
@@ -45,7 +45,7 @@
     url: "//"
 
 - title: ของหวาน - ไอศครีม
-  url: "/search/"
+  url: "/ของหวาน - ไอศครีม/"
   side: left
   dropdown:
   - title: บ้านไอติมหาดใหญ่-ไอติมแฮนเมด
@@ -55,7 +55,7 @@
   - title: กินมันเดือย เลียบชุมทางหาดใหญ่
     url: "//"
 - title: ร้านเหล้า บาร์ สถานบันเทิง
-  url: "//"
+  url: "/ร้านเหล้า บาร์ สถานบันเทิง/"
   side: left
   dropdown:
   - title: เซอคัส มีคนเช็คอินบ่อยน่ะ
