--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,7 +36,7 @@
     url: "//"
 
 - title: เครื่องดื่มและของกินเล่น
-  url: "/เครื่องดื่มและของกินเล่น/"
+  url: "/เครื่องดื่มของกินเล่น/"
   side: left
   dropdown:
   - title: เหน็บชา หาดใหญ่ ขับผ่านต้องแวะซื้อ
