--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,9 +6,9 @@
   side: left
   dropdown:
   - title: โคตรท้าพิสูจน์ต้องลอง ก๋วยเตี๋ยวท้าพิสูจน์หาดใหญ่
-    url: "//"
+    url: "/ก๋วยเตี๋ยวท้าพิสูจน์/"
   - title: "โกอ้วนกับซาลาเปาทอดชื่อดังหาดใหญ่"
-    url: "//"
+    url: "/โก๋อ้วน/"
   - title: "ก๋วยเตี๋ยวหมูย่างซอยลึกลับหาดใหญ่"
     url: "//"
   - title: เที่ยวดึกแวะข้าวต้มซอย 3 หาดใหญ่
@@ -31,7 +31,7 @@
   side: left
   dropdown:
   - title: "โอโออิ หาดใหญ่ เคยไปหรือยัง?"
-    url: "/"
+    url: "/โอโออิ/"
   - title: "กินกันให้อิ่ม “ฟ้าใสกระทะร้อน”"
     url: "//"
 
