--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,21 +10,21 @@
   - title: "โกอ้วนกับซาลาเปาทอดชื่อดังหาดใหญ่"
     url: "/โก๋อ้วน/"
   - title: "ก๋วยเตี๋ยวหมูย่างซอยลึกลับหาดใหญ่"
-    url: "//"
+    url: "/ก๋วยเตี๋ยวหมูย่าง/"
   - title: เที่ยวดึกแวะข้าวต้มซอย 3 หาดใหญ่
-    url: "//"
+    url: "/ข้าวต้มซอย3/"
   - title: ส้มตำชบาหาดใหญ่ นั่งกินห้องแอร์
-    url: "//"
+    url: "/ส้มตำชบา/"
   - title: ไก่ทอดหาดใหญ่ ต้องไก่ทอดเดชา
-    url: "//"
+    url: "/ไก่ทอดเดชา/"
   - title: โกดอนหาดใหญ่ อร่อยได้ไม่ต้องปรุง
-    url: "//"
+    url: "/โกดอน/"
   - title: เกาเหลาเลือดหมูป้าเขียว
-    url: "//"
+    url: "/เกาเหลาป้าเขียว/"
   - title: ราดหน้าโกฉ่อน ที่เปิดมายาวนาน
-    url: "//"
+    url: "/โกฉ่อน/"
   - title: ข.ไข่ รวมเมนูไข่
-    url: "//"
+    url: "/ข.ไข่/"
 
 - title: บุฟเฟ่ต์จัดหนัก
   url: "/บุฟเฟ่ต์จัดหนัก/"
@@ -33,35 +33,35 @@
   - title: "โอโออิ หาดใหญ่ เคยไปหรือยัง?"
     url: "/โอโออิ/"
   - title: "กินกันให้อิ่ม “ฟ้าใสกระทะร้อน”"
-    url: "//"
+    url: "/ฟ้าใสกะทะร้อน/"
 
 - title: เครื่องดื่มและของกินเล่น
   url: "/เครื่องดื่มและของกินเล่น/"
   side: left
   dropdown:
   - title: เหน็บชา หาดใหญ่ ขับผ่านต้องแวะซื้อ
-    url: "//"
+    url: "/เหน็บชา/"
   - title: ร้านนมสด 109 หน้า ม.อ.หาดใหญ่
-    url: "//"
+    url: "/นมสด/"
 
 - title: ของหวาน - ไอศครีม
   url: "/ของหวาน - ไอศครีม/"
   side: left
   dropdown:
   - title: บ้านไอติมหาดใหญ่-ไอติมแฮนเมด
-    url: "//"
+    url: "/บ้านไอติม/"
   - title: ไทยไท ไอติมกะทิสด แสงทองหาดใหญ่
-    url: "//"
+    url: "/ไทยไท/"
   - title: กินมันเดือย เลียบชุมทางหาดใหญ่
-    url: "//"
+    url: "/มันเดือย/"
 - title: ร้านเหล้า บาร์ สถานบันเทิง
   url: "/ร้านเหล้า บาร์ สถานบันเทิง/"
   side: left
   dropdown:
   - title: เซอคัส มีคนเช็คอินบ่อยน่ะ
-    url: "//"
+    url: "/เซอคัส/"
   - title: แวะเติมแก๊ส “แก๊สโซลีน” หาดใหญ่
-    url: "//"
+    url: "/แก๊สโซลีน/"
 
 - title: ค้นหา
   url: "/search/"
