--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -40,7 +40,7 @@
   side: left
   dropdown:
   - title: เหน็บชา หาดใหญ่ ขับผ่านต้องแวะซื้อ
-    url: "/เหน็บชา/"
+    url: "/เหน๊บชา/"
   - title: ร้านนมสด 109 หน้า ม.อ.หาดใหญ่
     url: "/นมสด/"
 
