--- a/assets/fonts/fontcustom.yml
+++ b/assets/fonts/fontcustom.yml
@@ -10,7 +10,7 @@
 # -----------------------------------------------------------------------------
 
 # The font's name. Also determines the file names of generated templates.
-font_name: Waffle Regular 
+font_name: iconfont 
 
 # Format of CSS selectors. {{glyph}} is substituted for the glyph name.
 css_selector: .icon-{{glyph}}
