--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ urlimg: "https://hatyairoiroi.github.io/images/"
 
 
 # Logo size is 600x80 pixels
-logo: "logo"
+logo: "logo.png"
 
 # Paginates all X entries
 paginate: 5
