--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -52,8 +52,8 @@
     url: "/บ้านไอติม/"
   - title: ไทยไท ไอติมกะทิสด แสงทองหาดใหญ่
     url: "/ไทยไท/"
-  - title: กินมันเดือย เลียบชุมทางหาดใหญ่
-    url: "/มันเดือย/"
+  - title: บัวลอยแม่เลื่อน หน้าธิดา
+    url: "/บัวลอยแม่เลื่อน/"
 - title: ร้านเหล้า บาร์ สถานบันเทิง
   url: "/ร้านเหล้า บาร์ สถานบันเทิง/"
   side: left
