--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,23 +7,23 @@
   dropdown:
   - title: โคตรท้าพิสูจน์ต้องลอง ก๋วยเตี๋ยวท้าพิสูจน์หาดใหญ่
     url: "/ก๋วยเตี๋ยวท้าพิสูจน์/"
-  - title: "โกอ้วนกับซาลาเปาทอดชื่อดังหาดใหญ่"
+//   title: "โกอ้วนกับซาลาเปาทอดชื่อดังหาดใหญ่"
     url: "/โก๋อ้วน/"
-  - title: "ก๋วยเตี๋ยวหมูย่างซอยลึกลับหาดใหญ่"
+// title: "ก๋วยเตี๋ยวหมูย่างซอยลึกลับหาดใหญ่"
     url: "/ก๋วยเตี๋ยวหมูย่าง/"
-  - title: เที่ยวดึกแวะข้าวต้มซอย 3 หาดใหญ่
+// title: เที่ยวดึกแวะข้าวต้มซอย 3 หาดใหญ่
     url: "/ข้าวต้มซอย3/"
-  - title: ส้มตำชบาหาดใหญ่ นั่งกินห้องแอร์
+   title: ส้มตำชบาหาดใหญ่ นั่งกินห้องแอร์
     url: "/ส้มตำชบา/"
-  - title: ไก่ทอดหาดใหญ่ ต้องไก่ทอดเดชา
+   title: ไก่ทอดหาดใหญ่ ต้องไก่ทอดเดชา
     url: "/ไก่ทอดเดชา/"
-  - title: โกดอนหาดใหญ่ อร่อยได้ไม่ต้องปรุง
+   title: โกดอนหาดใหญ่ อร่อยได้ไม่ต้องปรุง
     url: "/โกดอน/"
   - title: เกาเหลาเลือดหมูป้าเขียว
     url: "/เกาเหลาป้าเขียว/"
-  - title: ราดหน้าโกฉ่อน ที่เปิดมายาวนาน
+   title: ราดหน้าโกฉ่อน ที่เปิดมายาวนาน
     url: "/โกฉ่อน/"
-  - title: ข.ไข่ รวมเมนูไข่
+   title: ข.ไข่ รวมเมนูไข่
     url: "/ข.ไข่/"
 
 - title: บุฟเฟ่ต์จัดหนัก
@@ -32,7 +32,7 @@
   dropdown:
   - title: "โอโออิ หาดใหญ่ เคยไปหรือยัง?"
     url: "/โอโออิ/"
-  - title: "กินกันให้อิ่ม “ฟ้าใสกระทะร้อน”"
+   title: "กินกันให้อิ่ม “ฟ้าใสกระทะร้อน”"
     url: "/ฟ้าใสกะทะร้อน/"
 
 - title: เครื่องดื่มและของกินเล่น
@@ -41,14 +41,14 @@
   dropdown:
   - title: เหน็บชา หาดใหญ่ ขับผ่านต้องแวะซื้อ
     url: "/เหน๊บชา/"
-  - title: ร้านนมสด 109 หน้า ม.อ.หาดใหญ่
+ title: ร้านนมสด 109 หน้า ม.อ.หาดใหญ่
     url: "/นมสด/"
 
 - title: ของหวาน - ไอศครีม
   url: "/ของหวาน - ไอศครีม/"
   side: left
   dropdown:
-  - title: บ้านไอติมหาดใหญ่-ไอติมแฮนเมด
+   title: บ้านไอติมหาดใหญ่-ไอติมแฮนเมด
     url: "/บ้านไอติม/"
   - title: ไทยไท ไอติมกะทิสด แสงทองหาดใหญ่
     url: "/ไทยไท/"
