--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,8 @@
     url: "/ก๋วยเตี๋ยวท้าพิสูจน์/"
   - title: เกาเหลาเลือดหมูป้าเขียว
     url: "/เกาเหลาป้าเขียว/"
+  - title: ไก่อ้วน
+    url: "/ไก่อ้วน/"
 
 - title: บุฟเฟ่ต์จัดหนัก
   url: "/บุฟเฟ่ต์จัดหนัก/"
@@ -23,7 +25,8 @@
   dropdown:
   - title: เหน็บชา หาดใหญ่ ขับผ่านต้องแวะซื้อ
     url: "/เหน๊บชา/"
-
+  - title: ยิ้มละไม
+    url: "/ยิ้มละไม/"
 - title: ของหวาน - ไอศครีม
   url: "/ของหวาน - ไอศครีม/"
   side: left
@@ -32,6 +35,7 @@
     url: "/ไทยไท/"
   - title: บัวลอยแม่เลื่อน หน้าธิดา
     url: "/บัวลอยแม่เลื่อน/"
+    
 - title: ร้านเหล้า บาร์ สถานบันเทิง
   url: "/ร้านเหล้า บาร์ สถานบันเทิง/"
   side: left
