--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,14 +1,14 @@
 - name: YouTube
-  url: http://www.youtube.com/PhlowMedia
+  url: http://www.youtube.com/channel/UCVPIkgL-UIgrpwxSawY1d9Q
   class: icon-youtube
-  title: "Videos, Video-Anleitungen und Filme von Phlow auf YouTube"
+  title: "Hatyairoiroi!"
 
 - name: Facebook
-  url: http://www.facebook.com/phlow.media
+  url: http://www.facebook.com/hatyairoiroi
   class: icon-facebook
-  title: "Lass uns Freunde sein!"
+  title: "Hatyairoiroi!"
 
 - name: Pinterest
-  url: http://www.pinterest.com/phlowmedia/
+  url: http://www.pinterest.com/hatyairoiroi
   class: icon-pinterest
-  title: "Bilder, Fotos, Illustrationen, Grafiken sammeln..."
+  title: "Hatyairoiroi!"
