--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -4,7 +4,7 @@
   title: "Hatyairoiroi!"
 
 - name: Facebook
-  url: http://www.facebook.com/hatyairoiroi
+  url: http://www.facebook.com/hatyairoiroi58
   class: icon-facebook
   title: "Hatyairoiroi!"
 
